# NonogramSolver

./: .gitignore  CMakeLists.txt  Cargo.toml  NonogramSolver.sln  Solver.cpp  Solver.h  data.txt  main.cpp  mise.toml  todo.md
NonogramSolver/: NonogramSolver.vcxproj  NonogramSolver.vcxproj.filters  Solver.cpp  Solver.h  main.cpp
NonogramSolverConsole/: ConsoleApp.cs  InputRefiner.cs  NonogramSolverConsole.csproj  Program.cs  SolverApp.cs  data.txt  data2.txt  data4.txt
NonogramSolverLib/: Board.cs  LineInfo.cs  Solver.cs
Old_csharp/: .gitignore
Old_csharp/NonogramSolverConsole/: data3.txt
Old_csharp/NonogramSolverLib/: Direction.cs  LineInfo.cs  Solver.cs
handwrite/: 통합 문서1.xlsx
include/: Board.h  Solver.h
nonogram_solver/: Cargo.toml
nonogram_solver/src/: lib.rs  main.rs
sample/: data.txt  data2.txt  data3.txt  data4.txt  data5.txt
sample/table/: data1.txt  data2.txt  data3.txt  data4.txt  data5.txt  data6.txt  data7.txt
src/: Solver.cpp  board.rs  console.rs  lib.rs  main.cpp  main.rs  solver.rs
src/board/: board_vec.rs  mod.rs  vec2.rs
src/console/: mod.rs
src/display/: console.rs  mod.rs  simple_console.rs
src/solver/: board_formatter.rs  calculator.rs  cell.rs  display_handler.rs  error.rs  line_processor.rs  mod.rs  number_distribution_calculator.rs  solver_display.rs  solving_strategy.rs  types.rs  utils.rs
src/solver/calculator/: comb_counter.rs  mod.rs  number_distribution_calculator.rs
src/solver/parser/: file.rs  html.rs  mod.rs
tests/: board_tests.rs
